@@ -1893,11 +1893,14 @@ class WorkingTree(bzrlib.mutabletree.MutableTree):
                      kind, executable) in self._iter_changes(self.basis_tree(),
                          include_unchanged=True, require_versioned=False,
                          want_unversioned=True, specific_files=files):
-                    # Check if it's an unknown (but not ignored) OR
-                    # changed (but not deleted) :
-                    if ((versioned == (False, False) or
-                         content_change and kind[1] != None)
-                        and not self.is_ignored(path[1])):
+                    # Unknown ...
+                    if versioned == (False, False):
+                        # ... but not ignored
+                        if not self.is_ignored(path[1]):
+                            has_changed_files = True
+                            break
+                    # Versioned and changed, but not deleted
+                    elif content_change and (kind[1] != None):
                         has_changed_files = True
                         break
 
